# interpretability_frontier

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablate_mechanism_views.yaml  counterfactual_controls.yaml  debug_choice_eval.yaml  debug_cross_family.yaml  debug_dataset_scaling.yaml  debug_multimodel.yaml  debug_qwen.yaml  debug_qwen_4bit.yaml  debug_qwen_8bit.yaml  full_paper_template.yaml  self_reflection_debug.yaml  self_reflection_multimodel.yaml  submit_ready_balanced.yaml  tier1_core.yaml  tiny_smoke.yaml
paper/: main.tex
paper/sections/: abstract.tex  appendix.tex  introduction.tex  limitations.tex  methods.tex  related_work.tex  results.tex
src/frontier_interp/: cli.py  config_schema.py
src/frontier_interp/analysis/: metrics.py  plots.py  reporting.py  stats.py
src/frontier_interp/data/: base.py  dataset_factory.py  prompts.py
src/frontier_interp/experiments/: behavior.py  complexity.py  controls.py  mechanism.py  runner.py  self_reflection.py
src/frontier_interp/modeling/: interpreter.py  self_reflection.py  target_model.py
src/frontier_interp/registries/: datasets.py  models.py
src/frontier_interp/utils/: io.py  logging.py  seeds.py  time.py
tests/: test_config.py
